# font-converter

./: .gitignore  .vimrc  CMakeLists.txt  README.md
src/: ff-bridge.c  ff-bridge.h  font-converter.cpp  ttf2eot.cpp  ttf2eot.h
src/utility/: c-helper.c  c-helper.h
test/data/: vegur.ttc
test/src/: eot-test.h  ff-test.h
